# transformers4RecKDD

./: .gitignore  dataset_paths.py  google_colab_setup.sh  hdd_utils.py  log_history_helpers.py  losses.py  main_train_and_eval.py  metrics_helpers.py  nvt_workflows.py  plots.py  pyproject.toml  setup.cfg  setup.py  t4rec_models.py  t4rec_modules.py  t4rec_trainer_args.py  t4rec_trainers.py  trainer_callbacks.py
main/: main_train_and_eval.py
metrics_utils/: metrics_helpers.py  plots.py
paths/: folders.json
src/data_utils/: kdd_datasets_processing.py
src/main/: main_train_and_eval.py
src/metrics_utils/: metrics_helpers.py  plots.py
src/t4rec/: models.py
src/transformers4RecKDD/: paths.py
src/transformers4RecKDD/data_utils/: nvt_workflows.py
src/transformers4RecKDD/google_colab_utils/: utils.py
src/transformers4RecKDD/main/: build_nvt_ds.py  main_train_and_eval.py  train.py
src/transformers4RecKDD/metrics_utils/: metrics_helpers.py  plots.py
src/transformers4RecKDD/paths/: folders.json
src/transformers4RecKDD/t4rec/: callbacks.py  model_configs.py  models.py  trainers.py  training_args.py
t4rec/: schedulers.py
