[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transformers4RecKDD"
version = "0.0.1"
authors = [
  { name="Arsenii Vanunts", email="avanunts@yandex.ru" },
]
description = "Package with tools to train transformers4Rec on kdd Amazon cup data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPL-3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/avanunts/transformers4RecKDD"

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]