[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transformers4RecKDD"
version = "0.0.12"
authors = [
  { name="Arsenii Vanunts", email="avanunts@yandex.ru" },
]
description = "Package with tools to train transformers4Rec on kdd Amazon cup data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/avanunts/transformers4RecKDD"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
